# csnap

./: .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
.github/workflows/: cmake-build.yml
db/: CMakeLists.txt
db/include/csnap/database/: database.h  snapshot.h  sql.h  sqlqueries.h  symbolloader.h  transaction.h
db/src/: database.cpp  snapshot.cpp  sql.cpp  sqlqueries.cpp  symbolloader.cpp
examples/: CMakeLists.txt  create.cpp
exporter/: CMakeLists.txt
exporter/assets/: code.css  codenav.js  symbolpage.css  syntax.qtcreator.css  syntaxhighlighting.css  tooltip.css
exporter/cmake/: embed.cmake
exporter/include/csnap/exporter/: definitiontable.h  directorypage.h  exporter.h  filebrowser.h  filepagelinker.h  filesema.h  htmlpage.h  iterator.h  pageurl.h  pathresolver.h  sourcehighlighter.h  symbolpage.h  writefile.h  xmlwriter.h
exporter/src/: copyresources.cpp  definitiontable.cpp  directorypage.cpp  exporter.cpp  filebrowser.cpp  filepagelinker.cpp  filesema.cpp  pathresolver.cpp  sourcehighlighter.cpp  symbolpage.cpp  xmlwriter.cpp
include/csnap/: database.h  definition-table.h  dto.h  expression.h  file-semantics.h  sema.h  snapshot.h  sql.h  symbols.h  type.h  use.h
indexer/: CMakeLists.txt
indexer/include/csnap/indexer/: aggregator.h  indexer.h  parser.h  parsingresult.h  queue.h  runnable.h  scanner.h  sln.h  threadpool.h
indexer/src/: aggregator.cpp  indexer.cpp  parser.cpp  runnable.cpp  scanner.cpp  sln.cpp  threadpool.cpp
model/: CMakeLists.txt
model/include/csnap/model/: file.h  filecontent.h  filecontentcache.h  fileid.h  filelist.h  identifier.h  include.h  reference.h  symbol.h  symbolcache.h  symbolid.h  symbolmap.h  translationunit.h  translationunitid.h  translationunitlist.h  usrmap.h  version.h
model/src/: definition-table.cpp  filecontentcache.cpp  filelist.cpp  symbol.cpp  symbolcache.cpp  symbols.cpp  translationunitlist.cpp  usrmap.cpp  version.cpp
src/: CMakeLists.txt  cli.h  database.cpp  definition-table.cpp  export.cpp  file-semantics.cpp  main.cpp  scan.cpp  snapshot.cpp  symbols.cpp
